--- a/index.html
+++ b/index.html
@@ -10,26 +10,28 @@
   <body>
     <header>
       <div class="container">
-        <nav>
-          <a href="/">
-            <img src="./images/logo.svg" alt="Логотип Beauty Zone" />
-          </a>
-          <ul>
-            <li>
-              <a class="header-link" href="#information-section">Про нас</a>
-            </li>
-            <li>
-              <a class="header-link" href="#advantages-section">Чому ми</a>
-            </li>
-            <li>
-              <a class="header-link" href="#procedures-section"
-                >Наші процедури</a
-              >
-            </li>
-            <li>
-              <a class="header-link" href="#contacts-section">Контакти</a>
-            </li>
-          </ul>
+        <div class="header-container">
+          <nav>
+            <a href="/">
+              <img src="./images/logo.svg" alt="Логотип Beauty Zone" />
+            </a>
+            <ul>
+              <li>
+                <a class="header-link" href="#information-section">Про нас</a>
+              </li>
+              <li>
+                <a class="header-link" href="#advantages-section">Чому ми</a>
+              </li>
+              <li>
+                <a class="header-link" href="#procedures-section"
+                  >Наші процедури</a
+                >
+              </li>
+              <li>
+                <a class="header-link" href="#contacts-section">Контакти</a>
+              </li>
+            </ul>
+          </nav>
           <ul>
             <li>
               <a href="#">
@@ -53,7 +55,7 @@
               </a>
             </li>
           </ul>
-        </nav>
+        </div>
       </div>
     </header>
     <main>
